--- a/.gitignore
+++ b/.gitignore
@@ -418,3 +418,6 @@ IR Unity/Library/SourceAssetDB
 IR Unity/Logs/AssetImportWorker0.log
 IR Unity/Logs/shadercompiler-AssetImportWorker0.log
 IR Unity/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+IR Unity/Library/CurrentLayout-default.dwlt
+IR Unity/Library/SceneVisibilityState.asset
+IR Unity/Logs/shadercompiler-UnityShaderCompiler.exe0.log
