added dialogue system
Diyalog sistemini ekledim

--- a/.gitignore
+++ b/.gitignore
@@ -421,3 +421,4 @@ IR Unity/Logs/shadercompiler-UnityShaderCompiler.exe0.log
 IR Unity/Library/CurrentLayout-default.dwlt
 IR Unity/Library/SceneVisibilityState.asset
 IR Unity/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+IR Unity/.vscode/settings.json
